--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Alyssa</h1>
 </body>
 </html>
