--- a/index.html
+++ b/index.html
@@ -7,10 +7,34 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <div>
+    <div id="main_container">
+        <div id="header">
+            <img src="images/alyssa-header.png" alt="" height="168px" width="860px">
+        </div>
+        <div id="nav_box">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+            <div class="topnav" id="myTopnav">
+              <a href="#About" class="active">About</a>
+              <a href="#Artwork">Artwork</a>
+              <a href="#Old Artwork">Old Artwork</a>
+              <a href="#Contact">Contact</a>
+              <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+              </a>
+            </div>
+              
+        <div id="About">
 
-
+        </div>
+        </div>
+            <div id="about_me">
+            <ul>
+                <li>Hi my name is Alyssa Smith and here are some things about myself! I have been singing ever since I was 6, also I have been doing graphic design ever since I was 13. I started doing graphic design on discord, and I have started singing in a church choir. When i first started doing graphic design i would make banner’s and sell them on discord for money or game currency or game items. Until one day i had stopped because people stoped buying banners and icons from me. When i first started singing i had sang in my chuch choir and then i gave up on singing ever since i moved to delaware from new york. But once i came to cab calloway and i hear everyone singing in the hallways i got inspied to sing again. </li>
+            </ul>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
