--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         </div>
             <div id="nav_box">
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                
+                <div></div>
                 <div class="topnav" id="myTopnav">
-                 <a href="#About" class="active">About</a>
-                <a href="#Artwork">Artwork</a>
-                <a href="#Old Artwork">Old Artwork</a>
-                 <a href="#Contact">Contact</a>
-                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                 </a>
+                 <a href="#about_me" class="active">About</a>
+                <a href="#artwork">Artwork</a>
+                <a href="#my-old-artwork">Old Artwork</a>
+                 <a href="#contact">Contact</a>
+                 <a href="#credits">Credits</a>
+                 <a href="#fun-facts">Fun Facts</a>
             </div>
 
             <div id="artwork">
                 <h2>Some previews of my artwork</h2>
-                <img src="images/alyssa-artwork.png" alt="Artwork" width="1024px" height="398px">
+                <img src="images/alyssa-artwork.png" alt="Artwork" width="200px" height="400px">
              </div>
 
             <div id="about_me">
                 <h2>About me</h2>
                 
-                <p style="background-image: url(images/background-image.png);">
+                <p>
                     Hi my name is Alyssa Smith and here are some things about myself!<br>
                     I have been singing ever since I was 6,also I have been doing graphic design ever since I was 13.<br>
                     I started doing graphic design on discord, and I have started singing in a church choir. <br>
@@ -41,10 +41,35 @@
                     But once i came to cab calloway and i hear everyone singing in the hallways i got inspied to sing again. <br>
                 </p>
             </div>
+
         <div id="credits">
-            <p> webs i used</p>
-            <img src="images/credits.png" alt=""    height="400px" width="900px">
+            <h1> webs i used</h1>
+            <h2> Some websites i use are...</h2>
+            <h3> adobe illustrator 24</h3>
+            <h3> adobe idesign 24</h3>
+            <h3> visual studio code</h3>
+            <h2>These are my main three websites that i use!</h2>
         </div>
 
+        <div id="my-old-artwork">
+            <h1>Here are some of my old artworks</h1>
+            <img src="images/my-old-artwork.png" alt="my old artwork" width="700px" height="800px">
+        </div>
+
+        <div id="fun-facts">
+            <img src="images/photo-of-me.png" alt="photo of me" width="" height="">
+            <h1>Some more facts about me</h1>
+            <h2>Some of my hobbies are volleyball, soccer, singing. I am in many clubs such as BSU, HSA, Gospel choir. and Book Club. I am a comm arts major at Cab calloway schol of the arts. I have a little brother who is three years old. He is like my best friend! </h2>
+        </div>
+
+        <div id="contact">
+            <h2>uronlyalyssa@gmail.com</h2>
+            <h2>347-652-9095</h2>
+            <h2>ykalyssaa._</h2>
+            <div class="row">
+                <div class="column">
+            <img src="images/contact-me.png" alt="">
+                </div>
+        </div>0
 </body>
 </html>
